Se agregó el endpoint /auth/me ya funcional con sus respectivas etiquetas swagger para la documentación
